--- a/集合.md
+++ b/集合.md
@@ -181,7 +181,7 @@ $\bold{A.9}$选择公理($\text{AC}$)设集合$X$的每个元素皆非空,则存
 
 ## 集合的运算
 
-集合的运算：
+#### 基本运算
 
 交：$A\cap B : = \{x: x\in A \land x\in B \}$($\land$代表与条件)
 
@@ -198,9 +198,51 @@ $$
 $$
 其中$\alpha$是集合的指标,它在某个固定的指标集$I$中变化.
 
-若$S \supset B$,则称差$S \setminus B$为$B$关于$S$的余集.若包含集$S$已经清楚地指明或
+若$S \supset B$,则称差$S \setminus B$为$B$关于$S$的余集.若包含集$S$已经清楚地指明或由上下文可以理解时,就简称$S\setminus B$为$B$的余集,记作$B^c$.
+
+#### 积集
+
+在实分析中积集并不需要像代数一样的严格定义
+
+代数对于笛卡尔积的定义:
+
+定义($\text{Cartesian}$积)令$\{A_i:i\in I\}$是一族以$I$为指标集的(非空)集合.$A_i$的笛卡尔积是一个由所有的$i\in I$满足$f(i)\in A_i$的$f : I \to \bigcup_{i\in I}A_i$构成的集合.将其记作$\prod_{i\in I}A_i$
+
+实分析中则不需要这么严谨的定义积集,一般直接将一切有序偶$(a,b)$(其中$a \in A,b \in B$)所成的集合称为$A$与$B$的直积或者$\text{Cartesian}$积,记为$A\times B$.类似两个集的直积,可以定义多个集的直积.
+
+#### 映射
+
+设$A$与$B$都是非空集.若按照一定法则$f$,对于$A$中每个元$x$,都存在$B$中一个确定的元$y$与$x$相对应,则称$f$为定义在$A$上取值于$B$中的一个函数或映射,记作$y = f(x)$.$y$称为$x$在映射$f$之下的像,对于固定的$y$,$A$中满足$y = f(x)$的所有$x$全体称为$y$的原像(使用分离公理模式可以保证成立).集$A$称为$f$的定义域(domain),集$B$称为$f$的值域(image),记作$R(f)$(在映射中也经常记为$\Im(f)$).若$A$是空集$\varnothing$,我们就规定$f(A) = \varnothing$.
 
 
+
+#### 映射的性质
+
+设有映射$f : A \to B$.若$f(A) =B$,即对于$B$中的每个元$y$,都存在$A$中的元$x$使得$f(x) = y$则称$f$是一个满射.
+
+若$f(A)$中每个元$y$都存在一个唯一的元$x$使得$f(x) = y$,或者等价地对于$A$中任意两个不同的元$x_1$和$x_2$都有$f(x_1)\neq f(x_2)$,则称$f$是一个内射(单射)或者一一映射;若$f$既是一个满射又是一个内射,也就是说对于$B$中的每一个元$y$,$A$中均存在一个唯一的元$x$使得$f(x) = y$,则称$f$是一个双射.
+
+设映射$f : A \to B$是一一的,则对于$f(A)$中的每个元$y$都存在$A$中的唯一的元$x$与之对应,这样我们就得到一个$f(A)$上取值于$A$中的映射,称它是$f$的逆映射,记作$f^{-1}:f(A)\to A$.
+
+
+
+设有映射$f : A \to B$且$B_0 \subset B$,则称$A$中那些项在$B_0$中的元的全体为$B_0$在映射$f$下的原像,记作
+$$
+f^{-1}(B_0) = \{x: x\in A ,\text{且} f(x)\in B\}
+$$
+设$A$,$B$是两个集,若存在一个从$A$到$B$的双射$f$,则称$A$与$B$是一一对应,或者说$A$与$B$是对等的.
+
+
+
+
+
+#### 基数
+
+我们把互相对等的集合归于同一类,不对等的集不属于同一类,对这样的每类集予以一个记号,称这个记号为这一类集中每个集合的势(在代数中称为基数).集合$A$的势记为$|A|$.于是相互对等的集合具有相同的势,即$|A| = |B|$
+
+若集合$A$与$B$不对等,但集合$B$对等于集合$A$的某个子集,则称$A$的势大于$B$的势,或$B$的势小于$A$的势,记为$|A| > |B|$或$|B|<|A|$.
+
+凡是与自然数集对等的集合称为可数集,这时我们认为其基数为$\aleph_0$(叫做阿列夫-0)
 
 # 关于集环的讨论
 
