更新(连续统假设)

--- a/集合.md
+++ b/集合.md
@@ -177,7 +177,7 @@ $\bold{A.9}$选择公理($\text{AC}$)设集合$X$的每个元素皆非空,则存
 
 
 
-# 集合运算
+# 集合
 
 ## 集合的运算
 
@@ -234,15 +234,158 @@ $$
 
 
 
+### 常见反例
 
+1. 集合$A$,$B$与映射$f$使得$f(A \cap B) \neq f(A)\cap f(B)$
 
-#### 基数
+   不妨考虑集合$X = \{a,b\}$,令$A = \{a\},B= \{b\}$且
+   $$
+   f : X &\to& Y\\
+   a &\mapsto& c\\b &\mapsto& c
+   $$
+   其中$c\in Y$,不难得到$f|A$($f$在集合$A$上的限制)和$f|B$,有$f(A)\cap f(B) = \{c\}$且$f(A\cap B) = f(\varnothing) = \varnothing$,证毕$\Box$
+
+   注: 但是我们不难证明$f(A\cap B)\subset f(A)\cap f(B)$
+
+2. 集合$A,B$与映射$f$使得$B\subset A$而$f(A\setminus B) \neq f(A)\setminus f(B)$
+
+# 基数
+
+## 引入
 
 我们把互相对等的集合归于同一类,不对等的集不属于同一类,对这样的每类集予以一个记号,称这个记号为这一类集中每个集合的势(在代数中称为基数).集合$A$的势记为$|A|$.于是相互对等的集合具有相同的势,即$|A| = |B|$
 
 若集合$A$与$B$不对等,但集合$B$对等于集合$A$的某个子集,则称$A$的势大于$B$的势,或$B$的势小于$A$的势,记为$|A| > |B|$或$|B|<|A|$.
 
-凡是与自然数集对等的集合称为可数集,这时我们认为其基数为$\aleph_0$(叫做阿列夫-0)
+凡是与自然数集对等的集合称为可数集,这时我们认为其基数为$\aleph_0$(叫做阿列夫-0).易见,$A$为可数集的充要条件是$A$的元可以排列成无穷序列的形式
+$$
+a_1,a_2,\cdots,a_n,\cdots
+$$
+任何区间中的一切有理数所成的集合是可数的;任何区间中的一切代数数所成的集合也是可数的(enumerable).
+
+至于有理数可列的证明我们引用$\text{Cantor}$对于有理数可列的证明
+
+考虑如下形式的有理数排列
+$$
+\begin{matrix}
+	\frac{1}{1}&		\rightarrow&		\frac{2}{1}&		&		\frac{3}{1}&		\rightarrow&		\frac{4}{1}&		\cdots&		\\
+	&		\swarrow&		&		\nearrow&		&		\swarrow&		&		&		\\
+	\frac{1}{2}&		&		\frac{2}{2}&		&		\frac{3}{2}&		\cdots&		&		&		\\
+	\downarrow&		\nearrow&		&		\swarrow&		&		&		&		&		\\
+	\frac{1}{3}&		&		\frac{2}{3}&		\cdots&		&		&		&		&		\\
+	&		\swarrow&		&		&		&		&		&		&		\\
+	\frac{1}{4}&		\cdots&		&		&		&		&		&		&		\\
+	\downarrow&		&		&		&		&		&		&		&		\\
+	\vdots&		&		&		&		&		&		&		&		\\
+	&		&		&		&		&		&		&		&		\\
+\end{matrix}
+$$
+需要注意的是,那些在同一条对角线方向的分式,其分子与分母的和相同.现在我们从$\frac{1}{1}$开始随着箭头所指的方向依次指定$1$对应于$\frac{1}{1}$,$2$对应于$\frac{2}{1}$,$3$对应于$\frac{1}{2}$,$4$对应于$\frac{1}{4}$,即按照箭头的顺序进行排列.不难发现每一个有理数必将在某一步中对应于被指定的有限的正整数.于是上面列出的有理数集合(其中有些不知出现一次,比如$\frac{1}{1}$和$\frac{2}{2}$)与正整数集合构成了一个一一对应,于是有$|\Q| \leq |\N| = \aleph_0$,接下来不难构建一个$\N$到$\Q$的映射,即一个嵌入映射$n \mapsto n$.于是得到有理数集合$\Q$是可列的.
+
+## 连续统假设和实数集基数
+
+若$A$为有限集或可数集,则称$A$为至多可数集.若集合$A$的基数大于可数集的基数,则称其为不可数集.例如区间$[0,1]$为不可数集(我们将在下面进行证明(.若集合$A$对等于区间$[0,1]$,则称集合$A$具有连续统的势.记$|A| = \aleph$(注意不是$\aleph_1$)
+
+
+
+为什么我们要区分$\aleph$和$\aleph_1$呢?这便涉及到$\text{Cantor}$的连续统假设.
+
+在介绍连续统假设前,我们先介绍一下$\text{Dedekind}$分割.
+
+> $\text{Dedekind}$是在直线划分的启发下来定义无理数的.他注意到把直线上的点划分为两类,使一类的每一个点位于另一类中每一个点的上方,就必有且仅有一个点产生这个划分.这一事实使得直线是连续的.对于直线来说,这是一个公理.他把这个思想运用到数系上来,$\text{Dedekind}$说,让我们考虑任何一个吧有理数系分成两类的划分,它使得第一类中任一数小于第二类中的任一数.他吧有理数系的这样一个划分叫做一个分割($\text{cut}$).如果用$A_1$与$A_2$来表示这两类,则$(A_1,A_2)$表示这分割.在一些分割中,或者$A_1$有个最大的数,或者$A_2$有个最小的数;这样的而且只有这样的分割是由一个有理数确定的.
+>
+> 
+>
+> 但是存在着不是由有理数确定的分割,加入我们把所有的负有理数以及非负的且平方小于$2$的有理数放在第一类,把剩下的有理数放在第二类,则这个分割就不是由有理数确定的.通过每一个这样的分割,"我们创造出一个新的无理数$\alpha$来,它是完全由这个分割确定的.我们说,这个数$\alpha$对应于这个分割,或产生这个分割" 从而对应于每一个分割存在唯一的一个有理数或无理数.
+>
+> 
+>
+> $\text{Dedekind}$在引进无理数时所用的语言,留下一些不完善的地方.他说无理数$\alpha$对应于这个分割,又为这个分割所定义.但他没有说清楚$\alpha$是从哪里来的.他应当说,无理数$\alpha$不过就是这一个分割.事实上,$\text{Heinrich Weber}$告诉过$\text{Dedekind}$这一点,而$\text{Dedekind}$在$1888$年的一封信中却回答说,无理数$\alpha$并不是分割本身而是某些不同的东西,它对应于这个分割而且产生这个分割,同样,虽然有理数产生分割,它和分割是不一样的.他说,我们有创造这种概念的脑力.
+>
+> 
+>
+> 他接着给出一个分割$(A_1,A_2)$小于或大于另一分割$(B_1,B_2)$的定义.在定义了不等关系之后,他指出实数具有三个可以证明的性质:
+>
+> 1. 若$\alpha > \beta$,$\beta> \gamma$则$\alpha > \gamma$.
+> 2. 若$\alpha$和$\gamma$是两个两两不相同的实数,则存在着无穷多个数位于$\alpha$和$\gamma$之间.
+> 3. 若$\alpha$是任一个实数,则实数全体可以分为$A_1$和$A_2$两类,每一类含有无穷多个实数,$A_1$中的每一个数都小于$\alpha$,而$A_2$中的每一个数都大于$\alpha$,数$\alpha$本身可以指定任一类.实数类现在就具有连续性,他把这个性质表达为:如果实数全体的集合被划分为$A_1$和$A_2$两类,使$A_1$中每一个数小于$A_2$中所有的数,则必有且只有一个数$\alpha$产生这个划分.
+>
+> 
+>
+> 他接着定义实数的运算.分割$(A_1,A_2)$和$(B_1,B_2)$的加法是这样定义的:设$c$是任一有理数,如果有$a_1$属于$A_1$,$b_1$属于$B_1$,使得$a_1 + b_1 \geq c$我们就把$c$放在类$C_1$中.所有其他的有理数都放在类$C_2$中.这两类数$C_1$和$C_2$构成一个分割$(C_1,C_2)$,因为$C_1$中的每一个数小于$C_2$中每一个数.这个分割$(C_1,C_2)$就是$(A_1,A_2)$和$(B_1,B_2)$的和.他说,其他的运算可以类似地定义.他现在就能建立加法和乘法结合与交换等性质.虽然$\text{Dedekind}$的无理数理论,经过上面指出的一些少量修改之后,是完全符合逻辑的,但是$\text{Cantor}$认为分割在分析中的出现并不自然而加以批评.
+>
+
+我们认为实数集$\R$是连续的(参见前文所介绍的$\text{Dedekind}$分割,由于实数中任意一个数都可以构成分割,并且直线中任意一个点都可以由分割作出,并且直线必然是连续的,于是我们可以得出$\text{Dedekind}$分割可以推导出实数集是连续的,而有理数集是稠密的)并且不难得到实数集与$[0,1]$之间存在一个一一对应,构建映射(即常见的$\text{sigmoid}$函数,这在我们的神经网络中经常用到,其表达式为$\frac{1}{1+e^{-x}}$).即可得到$(0,1)$与$\R$之间的一一对应.不难得到$(0,1)$与$[0,1]$之间的一个一一对应(将$(0,1)$中所有的有理数以某种排列$r_1,r_2,\cdots,r_n,\cdots$的形式排列然后$0\mapsto r_1$,$1 \mapsto r_2$,$r_1 \mapsto r_3$,$r_2\mapsto r_4$,$r_3 \mapsto r_5$,$\cdots$,$r_{n} \mapsto r_{n+2}$,$\cdots$其中左侧为$[0,1]$,右侧为$(0,1)$得到这显然是一个一一对应).
+
+
+
+接下来我们考虑$[0,1]$和$\N$,即验证$[0,1]$是不可数集.
+
+我们依旧采用$\text{Cantor}$的证明方法(因为过于经典),我们先假定$0$与$1$之间的实数是可列的.那我们把每一个这样的实数写成无穷小数($1$写成$0.9999\cdots$,$\frac{1}{2}$写成$0.4999\cdots$等).假如它们是可列的,那么我们可以对于每一个$\N$中的正整数$n$指定一个实数,即
+$$
+\begin{eqnarray*}
+1 &\leftrightarrow& 0.a_{11}a_{12}a_{13}\cdots \\
+2 &\leftrightarrow& 0.a_{21}a_{22}a_{23}\cdots \\
+3 &\leftrightarrow& 0.a_{31}a_{32}a_{33}\cdots \\
+\vdots
+\end{eqnarray*}
+$$
+于是我们可以定义某个在$0$与$1$之间的实数如下:令$b = 0.b_1b_2b_3\cdots$,观察上式对角线上的元素,若$a_{kk} = 1$则$b_k = 9$,若$a_{kk} \neq 1$则$b_k = 1$于是不难发现由于其任意一个元素都无法再上式中找到对应,有其不属于上表中所列的任何一个实数,即$\N$到$[0,1]$的映射只能是一个单射.即$|\N| < |[0,1]|$
+
+
+
+由于$|\R| = |[0,1]|$于是可以得到$|R| > \aleph_0$.
+
+
+
+于是不难发现对$\R$有其并不可列,并且由于$\R$是连续的,我们将$|\R|$称为一个连续统的势.
+
+接下来考虑有理数集$\Q$的幂集$\mathcal{P}(\Q)$,根据有理数的稠密性(也可以使用$\text{Dedekind}$分割得到)可以得知存在一个映射$\R \hookrightarrow \mathcal{P}(\Q)$(即对于任意一个实数$r$将其映射到$\{x\in \Q: x<r\}$,根据有理数的稠密性得到对于任意实数$r_1$,$r_2$之间至少会存在一个有理数$x$,这就保证了其为一个单射),于是得到$|\R| \leq \mathcal{P}(\Q) = 2^{\aleph_0}$.
+
+考虑$[0,1]$区间与$\text{Cantor}$三分集
+$$
+C:= \left\{\sum_{n=1}^\infty a_n 3^{-n}: \forall n , a_n = 0\text{或} 2 \right\}
+$$
+不难发现这是一个三进制表示,即对于任意一个$n$都有$a_n$为$0$或$2$,于是$C$可以写为$a_1a_2\cdots a_n\cdots$的形式,由于其每个元素均为$0$或$2$,我们将$2$替换为$1$,于是可以得到一个一一对应$\N \to 2 =\{0,1\}$,每一个这样的映射代表$C$中的一个元素,不难验证这是一个一一映射,即$|C| = 2^{\aleph_0}$,由于$[0,1]$包含$\text{Cantor}$集$C$于是可以得到
+$$
+|\R| = 2^{\aleph_0}
+$$
+由于$\aleph_0$是最小的无穷基数(具体参见无穷序数$\omega$的推理),不难发现$2^{\aleph_0}>\aleph_0$于是得到$2^{\aleph_0}$是一个比$\aleph_0$大的无穷基数,这也意味着我们可以构建一些比$\aleph_0$更大的无穷基数.我们将比$\aleph_0$大但是比其他无穷基数小的无穷基数记为$\aleph_1$同理推广出$\aleph_2$,$\aleph_3$等.
+
+不难发现$\aleph_1 \leq 2^{\aleph_0}$,但是我们一直无法构建出一个比$2^{\aleph_0}$含有更少基数的集合使其大于$\aleph_0$于是$\text{Cantor}$做了一个假设即$\aleph_1 = 2^{\aleph_0}$,将其称为连续统假设($\text{continuum hypothesis}$).但是当时无论$\text{Cantor}$无论如何努力,都无法证明其是否成立.在$1900$年的国际数学会议上,$\text{Hilbert}$将这个问题列入了著名的$23$问中.但是$\text{Godel}$通过他的不完备性定理认为$\text{Cantor}$的连续统假设不可证明.(为了不爆掉读者的脑袋,在此对于不完备性定理不进行赘述)
+
+
+
+# $\R^1$中的序列与子集的一些基本概念和性质
+
+这部分是实分析中最为常用的关于集合部分的内容.
+
+## 敛散性与$\text{Cauchy}$收敛准则
+
+实数序列$\{x_n\}$被认为是收敛的,如果存在一个实数$x$,使得对任意的$\varepsilon >0$,存在正整数$N$,当$n >N$时,就有
+$$
+|x_n-x|< \varepsilon
+$$
+这时称序列$\{x_n\}$收敛于$x$,而称$x$为$\{x_n\}$的极限,记为
+$$
+\lim_{n \to \infty} x_n = x\text{或} x_n\to x(n \to \infty)
+$$
+若$\{x_n\}$不是收敛的,那我们称它是发散的.
+#### $\text{Cauchy}$收敛准则
+
+设$\{x_n\}$是一个实数序列,若对任意的$\varepsilon >0$,存在正整数$N$使得当$n >N$时,$m>N$时,有
+$$
+|x_n - x_m|< \varepsilon
+$$
+则称$\{x_n\}$是一个$\text{Cauchy}$序列.
+
+
+
+
+
+
+
+
 
 # 关于集环的讨论
 
