--- a/集合.md
+++ b/集合.md
@@ -12,6 +12,12 @@
 
 在介绍集合论的任何内容之前,按照惯例,我们都需要对其公理体系进行一个阐释,本文选取的是$\text{ZFC}(\text{Zermelo-Fraenkel-Choice})$公理体系并承认选择公理.
 
+至于为何要定义这个公理体系?让我们把视角回到$\text{Cantor}$对于集合论下初始定义的时候,$\text{Cantor}$称集合($\text{Set}$)是一些确定的,不同的东西的总体($\text{Collection}$),这些东西人们能意识到,并且能判断一个给定的东西是否属于这个总体.但是这会造成一些矛盾(我们在类的部分会进行详细阐述)所以,为了安全地使用这个概念,集合论的公理体系便诞生了.
+
+
+
+定义(集合) 集合($\text{Set}$)是一些确定的,不同的东西的总体($\text{Collection}$),这些东西人们能意识到,并且能判断一个给定的东西是否属于这个总体.
+
 ### 构筑
 
 $\text{ZFC}$公理体系构筑于
@@ -43,7 +49,7 @@ $\text{Zermelo}$的计划是,只准许那些看来不大会产生矛盾的类进
 
 $\text{Abraham A. Fraenkel}$改进了$\text{Zermelo}$所发展的集合论,$\text{von Neumann}$又对其加以改革(在此处不进行赘述).在$\text{Zermelo-Fraenkel}$系统中,避免悖论的希望寄托在将对于所容许的集合的类型加以限制,而同时又足够用来作为分析的基础.
 
-### ZFC公理体系
+### $\text{ZFC}$公理体系
 
 $\bold{A.0}$ 存在公理($\text{Exi}$) 存在一个集合
 $$
@@ -141,7 +147,70 @@ $$
 $$
 不难看出$\{0,1,2,3,\cdots\}\subseteq \omega$,所以无穷公理保证了它是一个集合.
 
-
+> 番外
+>
+> 分析的严密化揭示人们有必要去了解实数集合的结构.为了处理这个问题,$\text{Cantor}$曾引进关于无穷点集的一些概念.$\text{Cantor}$认为无穷集合的研究是如此重要,以至于他就为此而承担起了无穷集合的研究.他期望这个研究能使他清楚地区分不同的不连续点的无穷集合.
+>
+> 集合论的中心难点是无穷集合这个概念本身.从希腊时代以来,这样的集合很自然地引起数学家门与哲学家们的注意,而这种集合本以及看来是矛盾的性质,使得对于这种集合的理解没有任何进展.$\text{Zeno}$的悖论(应该是那个著名的追乌龟问题)是难点中的第一个迹象,既不是直线的无穷可分性,也不是直线作为一个由离散的点构成的无穷集合,足以对运动作出合理的结论.
+>
+> $\text{Aristotle}$也讨论过无穷集合,例如整数集合,但是他并不承认一个无穷的集合可以作为固定的整体而存在,对于他来说,集合只能是潜在无穷的($\text{potentially infinite}$).
+>
+> 但是$\text{Proclus}$($\text{Euclid}$的注释者)注意到圆的一根直径分圆成为两半,由于直径有无穷多个.但他使用这样的说法来解决这个矛盾,他说:任何人只能说很大很大的数目的直径或半圆,不能说一个实实在在无穷多的直径或半圆.换句话说,$\text{Proclus}$接受$\text{Aristotle}$的潜在无穷概念而不接受实无穷($\text{actual infinity}$)这样就回避了两个无穷大等于一个无穷大的问题.
+>
+> 哪怕是$\text{Gauss}$也反对把一个无穷量当作实体,"这在数学中是从来不允许的.无穷只是一种说话方式,当人们确切地说到极限时,是指某些比值可以任意近地趋近它,而另一些则允许没有界限的增加"$\text{Cauchy}$也不承认无穷集合的存在,因为部分能同整体构成一一对应这件事在他看来是荒谬的.
+>
+> 但是总有人认为无穷集合必须存在,第一个作出这个尝试的人是$\text{Bolzano}$,在他的《无穷悖论》一书(在他死后三年才出版)中他维护了实在无穷集合的存在,并且强调了两个集合等价的概念,这就是后来叫做两个集合的元素之间的一一对应关系,这个等价概念,适用于有限集合,同样也适用于无穷集合.他注意到在无穷集合的情形,一个部分或子集可以等价于整体;他并且坚持这个事实必须接受.例如$0$到$5$之间的实数通过公式$y = 12x/5$可以与$0$到$12$之间的实数构成一一对应,虽然这第二个数集包含了第一个数集.对于无穷集合,同样可以指定一种数叫超限数,使得不同的无穷集合有不同的超限数,虽然$\text{Bolzano}$关于超限数的指定根据$\text{Cantor}$的理论来看是不正确的.
+>
+> $\text{Bolzano}$关于无穷的研究,其哲学意义比数学意义来得多,并且没有充分弄清楚后来称之为集合的势或说集合的基数的概念.他同样遇到一些性质在他看来属于悖论.他认为,对于超限数无需建立运算(但是$\text{Cantor}$在他的序数理论里确确实实把$\aleph$数构造了出来),所以不需要深入研究.
+>
+> 接下来,有请集合论的创建者$\text{Georg Cantor}$登场,关于他的背景介绍在此略过.我们直接讨论他关于集合论的观点.
+>
+> 他认为,那些认为只有潜在实无穷集合的人是错误的.
+>
+> 对于$\text{Cantor}$来说,如果一个集合能够和它的一部分构成一一对应,它就是无穷的.他的一些集合论的概念,如集合的极限点、导集、第一型集等,是在一篇关于三角级数的文章中定义而且使用了的.一个集合称为是闭的,假如它包含了它的全部极限点(后面的正文会进行介绍);是开的,假如它的每一个点都是内点,即每一个点可以包含在一个区间内,这区间的点都属于这个集合.一个集合称为完全的,假如它是闭的并且它的每一个点都是它的极限点.
+>
+> $\text{Cantor}$寻求像"大小($\text{size}$)"这样的概念来区分无穷集合.他和$\text{Bolzano}$一样,认为一一对应关系是基本原则.两个能够一一对应的集合称为是等价的或具有相同的势(后来"势($\text{Power}$)"这个名词改成了"基数($\text{cardinal number}$)").两个集合可以具有不同的势.如果在$M$与$N$两个集合中,$N$能与$M$的某个子集构成一个一一对应,而$M$不可能与$N$的任何子集构成一一对应,就说$M$的势大于$N$的势.
+>
+> 数集自然是最重要的,所以$\text{Cantor}$用数集来阐述他关于等价或势的概念.$\text{Cantor}$引入了"可列"的概念,凡是能和正整数构成一一对应的任何一个集合就可以称为可列集合.这是最小的无穷集合.
+>
+> 在他论证了相同的势和不同的势的集合都存在之后,它继续研究集合的势这个概念并且引进了基数和序数的理论,其中超限基数($\text{transfinite cardinal number}$)和超限序数($\text{transfinite ordinal number}$)是惊人的创造(确实)
+>
+> 他认为,他的关于无穷数或超限数的理论,不同于普通所说的一个变量变得无穷小或无穷大的那个无穷概念.两个一一对应的集合具有相同的势或基数.对于有限集合来说,基数就是这个集合中元素的个数.对于无穷集合来说,要引进新的技术.自然数集合的基数就用$\aleph_0$来表示.由于实数不能和自然数构成一一对应(正文连续统假设部分有证明),实数必然有另一个基数.
+>
+> 接下来$\text{Cantor}$定义了集合基数的乘法与加法,在此不进行赘述
+>
+> 下一个概念便是序数的概念.它在引进一个已知集合的逐次导集的时候,造就发觉到序数概念的重要.他现在抽象地来引进这个概念,一个集合叫全序的($\text{simply ordered}$),假如它的任何两个元素之间有一个确定的顺序(以后或许会详细的讲一下序关系的概念,全序也称为线序或链,因为其上任意两个元素均可比,就像排在一条链上一样).即若给定$m_1$和$m_2$,要么有$m_1$先于$m_2$,要么有$m_2$先于$m_1$即$m_1< m_2$或$m_2 < m_1$必有一个成立.不难验证其满足传递性.
+>
+> 两个全序集被称作是相似的,若它们是一一对应且保留顺序(也称为保序双射,即同构),即若$m_1$对应于$n_1$,$m_2$对应于$n_2$,而$m_1<m_2$则必然有$n_1<n_2$.两个相似的集合具有相同的序型或序数,序数即为一个全序集$M$的集合顺序的序型.
+>
+> $\text{Cantor}$考虑了正整数集合,根据它们的自然顺序,其序数用$\omega$表示,另一方面,按照递减顺序的正整数集合$\cdots,4,3,2,1$,其序数用$^*\omega$表示正、负整数或者零所成的集合按通常的排序的顺序,其序数为$^*\omega +\omega$.
+>
+> 接着$\text{Cantor}$定义了序数的加法与乘法,两个序数的和是第一个全序集的序数加上第二个全序集的序数,顺序即按其特殊规定.例如按自然数的顺序的正整数集合之后随着五个最初的正整数所构成的集合,即
+> $$
+> 1,2,3,\cdots,1,2,3,4,5
+> $$
+> 其序数为$\omega+5$.序数的相等与不等也可以显然的给的给出定义,
+>
+> 现在,他引进超限序数的整个集合,这在一方面时基于它本身的价值,另一方面是为了确切地定义较大的超限基数.为了引进这些新的序数,他把全序集限制在良序集($\text{well - order}$)的范围之内.若一个全序集有最小的元素,且它的每一个自己都有最小的元素,那么这个全序集就叫良序集.
+>
+> 序数和基数都存在着级别.第一级是所有有限的序数
+> $$
+> 1,2,3,\cdots
+> $$
+> 我们用$\Z_1$表示上述的第一级序数.在第二级的序数是
+> $$
+> \omega ,\omega+1,\omega+2 ,\cdots,2\omega,2\omega+1,\cdots,\\
+> 3\omega,3\omega+1,\cdots,\omega^2,\cdots,\omega^3,\cdots,\omega^\omega
+> $$
+> 我们用$Z_2$表示,其中每一个都是基数为$\aleph_0$的集合的序数.
+>
+> $\Z_2$作为上述序数构成的集合,应该也有一个基数.这个集合是不可列的,从而$\text{Cantor}$引入了一个新的基数$\aleph_1$作为集合$\Z_2$的基数,并且证明了$\aleph_1$是$\aleph_0$的后继基数.
+>
+> 第三级基数的序数用$\Z_3$表示,它们是
+> $$
+> \Omega,\Omega+1,\cdots,\Omega+\Omega,\cdots
+> $$
+> 这些是良序集中基数为$\aleph_1$的集合的序数.而$\Z_3$这个序数的集合的基数大于$\aleph_1$,$\text{Cantor}$用$\aleph_2$来表示它的基数.这个序数与基数的级别可以无穷无尽地这样继续下去.
 
 $\bold{A.7}$替换公理模式($\text{Rep}$)给定公式$\psi(x,y)$,并且对任意$x$有唯一的$y$使得$\psi(x,y)$成立.则对任意集合$A$,以下集合存在
 $$
@@ -176,6 +245,10 @@ $\bold{A.9}$选择公理($\text{AC}$)设集合$X$的每个元素皆非空,则存
 选择公理中的$X$应该设想为一族非空集,选择函数$g(x)\in x$意味着从每个集合$x\in X$中挑出一个元素.
 
 
+
+## 总结
+
+公理集合论是当代数学的正统基础,它的表述范围之广,形式化程度之高,以至于数学本身也堪称为研究对象,诸如何谓证明,一个命题能否被证明,公理系统的一致性(无矛盾)等等都能被赋予明晰的数学内容,这类研究称为__元数学__.数学实践中平素基于自然语言的定义和论证等等,在原则上都能够改写为$\text{ZFC}$公理体系或其他公理体系集合论里的形式化语言,从而为其陈述和验证赋予一套坚实的基础.
 
 # 集合
 
@@ -220,7 +293,7 @@ $$
 
 设有映射$f : A \to B$.若$f(A) =B$,即对于$B$中的每个元$y$,都存在$A$中的元$x$使得$f(x) = y$则称$f$是一个满射.
 
-若$f(A)$中每个元$y$都存在一个唯一的元$x$使得$f(x) = y$,或者等价地对于$A$中任意两个不同的元$x_1$和$x_2$都有$f(x_1)\neq f(x_2)$,则称$f$是一个内射(单射)或者一一映射;若$f$既是一个满射又是一个内射,也就是说对于$B$中的每一个元$y$,$A$中均存在一个唯一的元$x$使得$f(x) = y$,则称$f$是一个双射.
+若$f(A)$中每个元$y$都存在一个唯一的元$x$使得$f(x) = y$,或者等价地对于$A$中任意两个不同的元$x_1$和$x_2$都有$f(x_1)\neq f(x_2)$,则称$f$是一个内射(单射)或者一一映射(不是一一对应);若$f$既是一个满射又是一个内射,也就是说对于$B$中的每一个元$y$,$A$中均存在一个唯一的元$x$使得$f(x) = y$,则称$f$是一个双射.
 
 设映射$f : A \to B$是一一的,则对于$f(A)$中的每个元$y$都存在$A$中的唯一的元$x$与之对应,这样我们就得到一个$f(A)$上取值于$A$中的映射,称它是$f$的逆映射,记作$f^{-1}:f(A)\to A$.
 
@@ -234,7 +307,7 @@ $$
 
 
 
-### 常见反例
+### 常见反例(可以当做习题)
 
 1. 集合$A$,$B$与映射$f$使得$f(A \cap B) \neq f(A)\cap f(B)$
 
@@ -248,6 +321,24 @@ $$
    注: 但是我们不难证明$f(A\cap B)\subset f(A)\cap f(B)$
 
 2. 集合$A,B$与映射$f$使得$B\subset A$而$f(A\setminus B) \neq f(A)\setminus f(B)$
+
+   设$A$和$B$是集合$X$的子集,且有$B \subset A$且$B \neq A$,$f$是把$X$中的每个元映射成$Y$中元$a$的一个映射,于是有
+   $$
+   f(A\setminus B) = \{a\},f(A)\setminus f(B) = \varnothing
+   $$
+   因此$f(A\setminus B) \neq f(A)\setminus f(B)$
+
+   注: 不难发现$f(A)\setminus f(B) \subset f(A \setminus B)$.
+
+3. $f(A)\subset f(B)$不蕴含$A \subset B$的映射$f$.
+
+   设$A,B$是$X$的非空子集,使$A$不含在$B$中,$f$是把$X$中的元映射成$Y$中某个固定元$a$的映射,则
+   $$
+   f(A) = f(B) = \{a\}
+   $$
+   但是并没有$A \subset B$.
+
+   
 
 # 基数
 
