把集合改成了预备知识

--- a/预备知识.md
+++ b/预备知识.md
@@ -6,6 +6,8 @@
 
 由于集合论是宽泛的领域,在实分析中我们所运用到的不过是浅薄的实分析基础.于是本章是提供给志在速成集合论以进行实分析内容方面研究的人所准备的,关于集合论方面的内容反而会比较少.
 
+假定读者已经学过了傅里叶分析(数学分析),线性代数(高等代数).
+
 
 
 # 公理体系
@@ -273,6 +275,8 @@ $$
 
 若$S \supset B$,则称差$S \setminus B$为$B$关于$S$的余集.若包含集$S$已经清楚地指明或由上下文可以理解时,就简称$S\setminus B$为$B$的余集,记作$B^c$.
 
+
+
 #### 积集
 
 在实分析中积集并不需要像代数一样的严格定义
@@ -287,7 +291,9 @@ $$
 
 设$A$与$B$都是非空集.若按照一定法则$f$,对于$A$中每个元$x$,都存在$B$中一个确定的元$y$与$x$相对应,则称$f$为定义在$A$上取值于$B$中的一个函数或映射,记作$y = f(x)$.$y$称为$x$在映射$f$之下的像,对于固定的$y$,$A$中满足$y = f(x)$的所有$x$全体称为$y$的原像(使用分离公理模式可以保证成立).集$A$称为$f$的定义域(domain),集$B$称为$f$的值域(image),记作$R(f)$(在映射中也经常记为$\Im(f)$).若$A$是空集$\varnothing$,我们就规定$f(A) = \varnothing$.
 
+也可以利用配对公理构建映射:
 
+集合间的映射$f:X \to Y$等同于它的图形$\Gamma_f \subset X \times Y$:对每个$x \in X$,交集$\Gamma_f \cap (\{x\}\times Y)$是一个独点集(不难发现这就意味着映射是良定义的),记作$\{f(x)\}$
 
 #### 映射的性质
 
@@ -338,13 +344,50 @@ $$
    $$
    但是并没有$A \subset B$.
 
-   
+
+# 序关系与序数
+
+虽然个人认为实分析并不需要序关系和序数的概念,但是由于基数和序数以及序关系存在着密不可分的联系,故此引入序关系.
+
+依照$\text{Bourbaki}$的观点,序结构连同拓扑和代数结构一道组成了数学结构的三大母体.
+
+## 定义
+
+定义(偏序集) __偏序集__ 意指资料$(P, \leq)$,其中$P$是集合而$\leq$是$P$上的二元关系(称其为偏序),满足于
+
+* 反身性 $\forall x \in P,x \leq x$
+* 传递性 $(x\leq y)\land(y \leq z) \Rightarrow x \leq z$
+* 反称性 $(x \leq y)\land (y \leq x)\Rightarrow x= y$
+
+仅仅满足反身性以及传递性的结构称为预序集.预序集间满足$x \leq y \Rightarrow f(x)\leq f(y)$的映射称为保序映射.
+
+> 一般使用$x < y$表示$x\leq y$且$x \neq y$.符号$\geq$和$>$的意思是自明的.今后谈及偏序时经常省略其中的关系$\leq$
+
+ 设$P,Q$为偏序集,若映射$\phi : P \to Q$满足$(x <x') \Rightarrow(\phi(x)<\phi(x'))$则称$\phi$是严格增的.若$\phi: P \to Q$是双射并且$\phi$和$\phi^{-1}$均为保序映射,则称$\phi$为$P,Q$之间的同构.偏序集的__同构类__称为序型.偏序集的子集集成了自然的偏序结构.
+
+既然偏序集中有大小的概念,自然就存在着一条链上极大元和极小元的概念,对于一个偏序集的子集存在上界与下界的概念
+
+我们依照如下方式定义它们.
+
+定义: 设$P' \subset P$,而$P$是预序集.
+
+* 称$x \in P$是$P$的极大元,如果不存在满足$x <y$的元素$y \in P$
+* 称$x \in P$是$P'$的上界(注意,此处是$P'$)如果对于每个$x' \in P'$都有$x' \leq x$
+* 称$x \in P$是$P'$的上确界,如果$x$是其上界,而且对每个上界$x' \in P'$满足$x' \leq x$
+
+同理,不难定义出极小元,下界和下确界,仅仅需要把上面的$\leq$换成$\geq$.对于偏序集$P$,根据反称性,其子集$P'$的上确界或下确界若存在则是唯一的,分别即为$\sup P'$和$\inf P'$
+
+
+
+
 
 # 基数
 
 ## 引入
 
-我们把互相对等的集合归于同一类,不对等的集不属于同一类,对这样的每类集予以一个记号,称这个记号为这一类集中每个集合的势(在代数中称为基数).集合$A$的势记为$|A|$.于是相互对等的集合具有相同的势,即$|A| = |B|$
+我们把互相对等的集合归于同一类,不对等的集不属于同一类,对这样的每类集予以一个记号,称这个记号为这一类集中每个集合的势(在代数中称为基数).集合$A$的势记为$|A|$.于是相互对等的集合具有相同的势,即$|A| = |B|$.
+
+不难发现$|A| \leq |B|$等价于$A$到$B$的某个子集之间存在一个单射.
 
 若集合$A$与$B$不对等,但集合$B$对等于集合$A$的某个子集,则称$A$的势大于$B$的势,或$B$的势小于$A$的势,记为$|A| > |B|$或$|B|<|A|$.
 
@@ -375,7 +418,7 @@ $$
 
 ## 连续统假设和实数集基数
 
-若$A$为有限集或可数集,则称$A$为至多可数集.若集合$A$的基数大于可数集的基数,则称其为不可数集.例如区间$[0,1]$为不可数集(我们将在下面进行证明(.若集合$A$对等于区间$[0,1]$,则称集合$A$具有连续统的势.记$|A| = \aleph$(注意不是$\aleph_1$)
+若$A$为有限集或可数集,则称$A$为至多可数集.若集合$A$的基数大于可数集的基数,则称其为不可数集.例如区间$[0,1]$为不可数集(我们将在下面进行证明(.若集合$A$对等于区间$[0,1]$,则称集合$A$具有连续统的势.记$|A| = \aleph$(由于$\text{Cantor}$最初称这个集合的基数为$c$,于是有很多文献也称其为$c$.注意不是$\aleph_1$))
 
 
 
@@ -447,6 +490,18 @@ $$
 
 
 
+## 性质
+
+1. 设$A_2 \subset A_1 \subset A_0$.且$|A_2| = |A_0|$则有$|A_1| = |A_0|$
+
+   若$|A_2| = |A_0|$则在$A_2$与$A_0$之间可以构建一个双射,又犹豫$A_2 \subset A_0$于是不难发现$A_2 = A_0$于是自然可以得到$A_1 = A_0$自然有$|A_1| = |A_0|$
+
+2. 设$|A_1| \leq |A_2|, |A_2| \leq |A_3|$,则$|A_1| \leq |A_3|$
+
+   根据先前所述,
+
+3. 
+
 # $\R^1$中的序列与子集的一些基本概念和性质
 
 这部分是实分析中最为常用的关于集合部分的内容.
@@ -469,6 +524,128 @@ $$
 |x_n - x_m|< \varepsilon
 $$
 则称$\{x_n\}$是一个$\text{Cauchy}$序列.
+
+## 增减序列与上下极限
+
+### 数列的极限
+
+若$\forall k \in \N$,$x_k \leq x_{k+1}$,则称$\{x_k\}$是__递增序列__,这时定义$\lim_{n \to \infty}x_n = \sup_{k \geq 1}\{x_k\}$.
+
+若$\forall k \in \N$,$x_k \geq x_{k+1}$,则称$\{x_k\}$是__递减序列__,这时定义$\lim_{n \to \infty}x_n = \inf_{k \geq 1}\{x_k\}$.
+
+
+
+由给定的数列$\{x_n\}$,产生递减序列$y_k =\sup_{n \geq k}\{x_n\}$和递增序列$z_k = \inf_{n \geq k}\{x_k\}$,由此定义数列的上、下极限:
+$$
+\limsup_{n \to \infty} x_n = \lim_{k \to \infty}y_k = \inf_{k \geq 1}\{y_k\} = \inf_{k \geq 1}\{\sup_{n \geq k}x_n\}\\
+\liminf_{n \to \infty} x_n = \lim_{k \to \infty}z_k = \inf_{k \geq 1}\{z_k\} = \sup_{k \geq 1}\{\inf_{n \geq k}x_n\}
+$$
+
+
+### 基本性质
+
+1. $\lim_{n \to \infty}x_n = x \Leftrightarrow x = x_1 + \sum_{k=1}^{\infty} (x_{k+1}-x_k)$
+
+   由数列极限的定义可以直接得出
+
+   
+
+2. $\lim_{n \to \infty}x_n = a\Leftrightarrow \liminf_{n \to \infty}x_n = \limsup_{n \to \infty}x_n = a$
+
+   由数列极限和上下极限的定义，$\limsup_{n \to \infty}x_n = \inf_{k \geq 1}\{\sup_{n \geq k}x_n\}$,$\liminf_{n \to \infty}x_n = \sup_{k \geq 1}\{\inf_{n \geq k}x_n\}$于是若有$\lim_{n \to \infty}x_n = a$,则由$\text{Cauchy}$收敛准则可以得知，给定正整数$N$，对于任意的$\varepsilon >0$，若$n >N,m>N$则有
+   $$
+   |x_m - x_n| < \varepsilon
+   $$
+   于是对于$\inf_{k \geq 1}\{\sup_{n \geq k}x_n\}$有对于$k$增大时$\sup_{n \geq k}x_n$单调递减，并且在$k >N$时有$\sup_{n \geq k}x_n \leq \sup_{n \geq N}x_n$根据数列极限的定义可以立即推知$|\sup_{n \geq k}x_n - a| < \varepsilon$.不难得出$\limsup_{n \to \infty}x_n = \inf_{k \geq 1}\{\sup_{n \geq k}x_n\} = a$同理可以得到$\liminf_{n \to \infty}x_n = \sup_{k \geq 1}\{\inf_{n \geq k}x_n\} = a$
+
+   
+
+3. $\liminf_{n \to \infty}\{-x_n\}=\limsup_{n \to \infty}\{x_n\}$
+
+   欲证明此式，即证明$\sup_{k \geq 1}\{\inf_{n \geq k} -x_n\} = -\inf_{k \geq 1}\{\sup_{n \geq k}x_n\}$,不难发现$\inf_{n \geq k}-x_n = -\sup_{n \geq k} x_n$,于是可以得到以下推论$$\sup_{k \geq 1} \{\inf_{n \geq k} -x_n\}= \sup_{k \geq 1}\{-\sup_{n \geq k} x_n\}$$再使用先前所得到的性质可以得到$$\sup_{k \geq1} \{-\sup_{n \geq k}x_n\} =-\inf_{k \geq 1}\{\sup_{k \geq n} x_n\}$$$\Box$
+
+   
+
+4. $x_n \leq y_n \Rightarrow \liminf_{n \to \infty}x_n \leq \liminf_{n \to \infty}y_n; \limsup_{n \to \infty}x_n \leq \limsup_{n \to \infty}y_n$
+
+   不难发现只需要证明$\liminf_{n \to \infty}x_n \leq \liminf_{n \to \infty}y_n$的情况即可，$\limsup$的情况可以类似证明.接下来证明$\liminf$的情况.欲证$\liminf_{n \to \infty}x_n \leq \liminf_{n \to \infty}y_n$即证明$$\sup_{k \geq 1}\{\inf_{n \geq k}x_n\}\leq \sup_{k \geq 1}\{\inf_{n \geq k}y_n\}$$由于$x_n \leq y_n$于是不难得出对于任意的$k$均有$\inf_{n \geq k}x_n \leq \inf_{n \geq k}y_n$于是自然有$\sup_{k \geq 1}\{\inf_{n \geq k}x_n\} \leq \sup_{k \geq 1}\{\inf_{n \geq k }y_n\}$$\Box$
+
+   
+
+5. 若$x_n >0$,则$\limsup_{n \to \infty}\{\frac{1}{x}\} = \frac{1}{\liminf_{n \to \infty}\{x_n\}}$
+
+   由于$\limsup_{n \to \infty}\{\frac{1}{x}\} = \inf_{k \geq 1}\{\sup_{n \geq k}\frac{1}{x_n}\}$于是我们只需要证明$\inf_{k \geq 1}\{\sup_{n \geq k}\frac{1}{x}\}=\frac{1}{\sup_{k \geq 1}\{\inf_{n \geq k}x_n\}}$由于$\sup_{n \geq k}\frac{1}{x_n}$相当于$\frac{1}{\inf_{n \geq k}x_n}$于是不难得到$\inf_{k \geq 1}\{\sup_{n \geq k}x_n\} =\inf_{k \geq 1}\{\frac{1}{\inf_{n \geq k}x_n}\}$接着再一次使用刚刚得到的结论可以得出$$\inf_{k \geq 1}\{\frac{1}{\inf_{n \geq k}x_n}\} = \frac{1}{\sup_{k \geq 1}\{\inf_{n \geq k}x_n\}}$$$\Box$
+
+   
+
+6. 设$\{x_{n_k}\}$是$\{x_n\}$的任一收敛子列，则有$$\liminf_{n \to \infty}\{x_n\} \leq\lim_{k \to \infty}x_{n_k} \leq \limsup_{n \to \infty}\{x_n\}$$
+
+   不难发现上式等价于$\lim_{k \to \infty}z_k \leq \lim_{k \to \infty}x_{n_k}\leq \lim_{k \to \infty}y_k$于是其等价于证明$$\inf_{j \geq k}\{x_{n_j}\} = z_{n_k}\leq \sup_{k \geq 1}\{z_{n_k}\} \leq x_{n_k} \leq \inf_{k \geq 1}\{y_k\}\leq y_{n_k} =\sup_{j \geq k}\{y_{n_j}\}$$根据上式直接可以得到公式成立$\Box$
+
+   
+
+7. $\inf_{n \geq j}\{x_n\} \leq \liminf_{n \to \infty}\{x_n\} \leq \limsup_{n \to \infty}\{x_n\} \leq \sup_{n \geq m}\{x_n\},\forall j,m \in \mathbb{N}$
+
+   不难发现该式等价于$$z_j \leq \lim_{n \to \infty}z_k\leq \lim_{n \to \infty}y_k \leq y_k$$不难发现$\{z_k\}$的单调递增性以及$y_K$的单调递减性配合性质6保证了其成立$\Box$
+
+   
+
+8. $$\limsup_{n \to \infty}x_n = x\Leftrightarrow \left\{\begin{array}{c}\forall \varepsilon >0, \exists n_0\text{使得} \forall n \geq n_0,x_n < x+\varepsilon\\ \forall \varepsilon >0,\forall n_0,\exists n\geq n_0,\text{使得}x_n > x- \varepsilon\\ \end{array}\right.$$
+
+   ($\Rightarrow$)由于$\limsup_{n \to \infty}x_n = \lim_{k \to \infty}y_k$于是若有$\limsup_{n \to \infty}x_n= x$则有对于任意的$\varepsilon>0$,$\exists N$对于$k >N$有$|y_k - x| < \varepsilon$即$|\sup_{n \geq k} x_n - x|< \varepsilon$于是可以得到$x-\varepsilon<\sup_{n \geq k}x_n <x+\varepsilon$即取$n_0 = k$得到$\forall n \geq n_0$,$x_n < x+\varepsilon$并且由于$\sup_{n \geq k}x_n > x-\varepsilon$于是对于任意的$n_0:=k$都至少存在一个$n \geq n_0$使得$x_n >x-\varepsilon$.
+
+   ($\Leftarrow$)的情况只需要根据前文的结论进行反推，不难发现若满足左侧两个条件则满足$\sup_{n \geq k}x_n < x+ \varepsilon$切$x- \varepsilon < \sup_{n \geq k}x_n$自然得到$\lim_{k \to \infty}y_k = x$即$\limsup_{n \to \infty}x_n = x$ $\Box$类似的，还有$$\liminf_{n \to \infty}x_n = \left\{\begin{array}{c}\forall{\varepsilon >0},\exists n_0,\forall n \geq n_0,x_n > x-\varepsilon \\\forall \varepsilon >0,\forall n_0,\exists n \geq n_0,x_n < x+\varepsilon \\ \end{array} \right.$$其证明方式与前文几乎一致，故不过多赘述
+
+   
+
+9. $\begin{eqnarray*}\liminf_{n \to \infty}x_n + \liminf_{n \to \infty}y_n &\leq& \liminf_{n \to \infty}\{x_n + y_n\}\leq \limsup_{n \to \infty}x_n + \liminf_{n \to \infty}y_n\\ &\leq& \limsup_{n \to \infty}\{x_n + y_n\} \leq \limsup_{n \to \infty}x_n + \liminf_{n \to \infty}y_n \end{eqnarray*}$
+
+   该性质的证明需要分成若干步骤进行.
+
+   1. $$
+      \liminf_{n \to \infty}x_n +\liminf_{n \to \infty}y_n \leq \liminf_{n \to \infty}\{x_n +y_n\}
+      $$
+
+      即证明
+      $$
+      \sup_{k \geq 1}\{\inf_{n \geq k}x_n\}+\sup_{k \geq 1}\{\inf_{n \geq k}y_n\} \leq \sup_{k \geq 1}\{\inf_{n \geq k}\{x_n+y_n\}\}
+      $$
+      由三角不等式可知$\inf_{n \geq k}\{x_n+y_n\}\geq \inf_{n \geq k}x_n+\inf_{n \geq k}y_n$(其原因是$x_n+y_n$取到下界时,$x_n$和$y_n$不一定同时为下界,于是其大于等于$x_n$的下界与$y_n$下界之和)更进一步不难得出$\sup_{k \geq 1}\{\inf_{n \geq k}x_n + \inf_{n \geq k}y_n\}\leq \sup_{k \geq 1}\{\inf_{n \geq k}\{x_n+y_n\}\}$由于左式为$\sup_{k \geq 1}\{\inf_{n \geq k}x_n + \inf_{n \geq k}y_n\}$的形式,不难发现其即为$\sup_{k \geq 1}\{\inf_{n \geq k}x_n\}+\sup_{k \geq 1}\{\inf_{n \geq k}y_n\}$此式证毕.
+
+      
+
+   2. $$
+      \liminf_{n \to \infty}\{x_n+y_n\} \leq \limsup_{n \to \infty}x_n + \liminf_{n \to \infty}y_n
+      $$
+
+      即证$\sup_{k \geq 1}\{\inf_{n \geq k}\{x_n +y_n\} \}\leq \inf_{k \geq 1}\{\sup_{n \geq k}x_n\} +\sup_{k \geq 1}\{\inf_{n \geq k}y_n \}$成立,由于$\sup_{n \geq k}x_n + \inf_{n \geq k}y_n \geq \inf_{n \geq k}\{x_n + y_n\}$于是自然可以得到$\inf_{k \geq 1}\{\sup_{n \geq k}x_n\}+\sup_{k \geq 1}\{\inf_{n \geq k}y_n\}\geq \liminf_{n \to \infty}\{x_n+y_n\}$
+
+   3. $$
+      \limsup_{n \to \infty}x_n + \liminf_{n \to \infty}y_n \leq \limsup_{n \to \infty}\{x_n + y_n\}
+      $$
+
+      即证$\inf_{k \geq 1}\{\sup_{n \geq k}x_n\}+\sup_{k \geq 1}\{\inf_{n \geq k}y_n\} \leq \inf_{k \geq 1}\{\sup_{n \geq k}\{x_n + y_n\}\}$由于$\sup_{n \geq k}\{x_n + y_n\} \geq \sup_{n \geq k}x_n + \inf_{n \geq k}y_n$于是可以得知上式成立.
+
+   4. $$
+      \limsup_{n \to \infty}\{x_n + y_n\}\leq \limsup_{n \to \infty}x_n + \limsup_{n \to \infty}y_n
+      $$
+
+      不难发现该式证明和1.的证明无异
+
+   自此,我们证明了
+   $$
+   \begin{eqnarray*}\liminf_{n \to \infty}x_n + \liminf_{n \to \infty}y_n &\leq& \liminf_{n \to \infty}\{x_n + y_n\}\leq \limsup_{n \to \infty}x_n + \liminf_{n \to \infty}y_n\\ &\leq& \limsup_{n \to \infty}\{x_n + y_n\} \leq \limsup_{n \to \infty}x_n + \liminf_{n \to \infty}y_n \end{eqnarray*}
+   $$
+   $\Box$
+
+10. 与9类似,可以得到
+   $$
+   \begin{eqnarray*}
+   (\liminf_{n \to \infty}x_n)(\liminf_{n \to \infty}y_n)&\leq& \liminf_{n\to \infty}\{x_ny_n\}\leq (\limsup_{n \to \infty}x_n)(\liminf_{n \to \infty }y_n)\\
+   &\leq& \limsup_{n \to \infty}\{x_ny_n\} \leq (\limsup_{n \to \infty}x_n)(\limsup_{n \to \infty}y_n)
+   \end{eqnarray*}
+   $$
+   证明从略
 
 
 
