增加了引用

--- a/预备知识.md
+++ b/预备知识.md
@@ -351,7 +351,7 @@ $$
 
 依照$\text{Bourbaki}$的观点,序结构连同拓扑和代数结构一道组成了数学结构的三大母体.
 
-## 定义
+## 序关系与偏序集
 
 定义(偏序集) __偏序集__ 意指资料$(P, \leq)$,其中$P$是集合而$\leq$是$P$上的二元关系(称其为偏序),满足于
 
@@ -377,9 +377,25 @@ $$
 
 同理,不难定义出极小元,下界和下确界,仅仅需要把上面的$\leq$换成$\geq$.对于偏序集$P$,根据反称性,其子集$P'$的上确界或下确界若存在则是唯一的,分别即为$\sup P'$和$\inf P'$
 
+若偏序集$P$是非空的,并且对任何的$x,y\in P$子集$\{x,y\}$都有上界,则称$P$是__滤过序集__.
 
+## 全序
 
+不难发现序关系其实可以表现为一张有向图,比如
 
+![image-20230630165012398](./image/1.png)
+
+上图就是一种序关系,其中$\to$可以视为$\leq$,于是不难发现,在这种关系下,我们无法确定$d$和$e$之间的大小关系,那么能够确定两两元素之间的大小关系的偏序集也就具有了一定的特殊性,不难发现其构造应当像一条链子或者线一样.
+
+定义(全序集) 若偏序集$P$中的任一对元素$x,y$皆可以比大小(即:要么有$x \leq y$要么有$y \leq x$)则称$P$是__全序集__.全序集又称作线序集或者链.
+
+显然有全序集是滤过的.
+
+## 良序
+
+## 序数
+
+## 超穷归纳法
 
 # 基数
 
