--- a/预备知识.md
+++ b/预备知识.md
@@ -252,7 +252,7 @@ $\bold{A.9}$选择公理($\text{AC}$)设集合$X$的每个元素皆非空,则存
 
 公理集合论是当代数学的正统基础,它的表述范围之广,形式化程度之高,以至于数学本身也堪称为研究对象,诸如何谓证明,一个命题能否被证明,公理系统的一致性(无矛盾)等等都能被赋予明晰的数学内容,这类研究称为__元数学__.数学实践中平素基于自然语言的定义和论证等等,在原则上都能够改写为$\text{ZFC}$公理体系或其他公理体系集合论里的形式化语言,从而为其陈述和验证赋予一套坚实的基础.
 
-# 集合
+# 集合与映射
 
 ## 集合的运算
 
@@ -287,9 +287,9 @@ $$
 
 实分析中则不需要这么严谨的定义积集,一般直接将一切有序偶$(a,b)$(其中$a \in A,b \in B$)所成的集合称为$A$与$B$的直积或者$\text{Cartesian}$积,记为$A\times B$.类似两个集的直积,可以定义多个集的直积.
 
-#### 映射
+## 映射
 
-设$A$与$B$都是非空集.若按照一定法则$f$,对于$A$中每个元$x$,都存在$B$中一个确定的元$y$与$x$相对应,则称$f$为定义在$A$上取值于$B$中的一个函数或映射,记作$y = f(x)$.$y$称为$x$在映射$f$之下的像,对于固定的$y$,$A$中满足$y = f(x)$的所有$x$全体称为$y$的原像(使用分离公理模式可以保证成立).集$A$称为$f$的定义域(domain),集$B$称为$f$的值域(image),记作$R(f)$(在映射中也经常记为$\Im(f)$).若$A$是空集$\varnothing$,我们就规定$f(A) = \varnothing$.
+设$A$与$B$都是非空集.若按照一定法则$f$,对于$A$中每个元$x$,都存在$B$中一个确定的元$y$与$x$相对应,则称$f$为定义在$A$上取值于$B$中的一个函数或映射,记作$y = f(x)$.$y$称为$x$在映射$f$之下的像,对于固定的$y$,$A$中满足$y = f(x)$的所有$x$全体称为$y$的原像(使用分离公理模式可以保证成立).集$A$称为$f$的定义域,记作$\text{Dom}(f)$(domain),集$B$称为$f$的值域(image),记作$R(f)$(在映射中也经常记为$\Im(f)$).若$A$是空集$\varnothing$,我们就规定$f(A) = \varnothing$.
 
 也可以利用配对公理构建映射:
 
@@ -393,9 +393,94 @@ $$
 
 ## 良序
 
+接下来考虑全序集$\Z_{\geq0}$与$\Z$,不难发现它们仍有区别,取$\Z_{\geq0}$的任意子集$\Z_n$都存在一个最小元$a\geq0$,但是对于$\Z$,取其子集$\{x\in \Z,x< 0\}$可以得知该子集是没有最小元的,于是对于全序集仍然可以作一个划分.
+
+定义(良序集,$\text{Cantor}$)全序集$P$满足下述性质便可以称为良序集:每个$P$的非空子集都有极小元.
+
+接下来研究良序集的性质:
+
+设$P$为良序集,映射$\phi : P \to P$严格增,则对每个$x\in P$都有$\phi(x)\geq x$(由严格增的定义可以推导出,其证明方式为$\phi(\phi(z))<\phi(z)<z$,取$z$为极小元便可以得到$\phi(z)<z$,但是由于$z$为极小元,于是有$\phi(z) =z$),特别地,
+
+1. 可以得到$P$没有非平凡的自同构(由于$P$的每个子集均有极小元,若$P$不为良序集可以通过将$P$中的元素前移一位实现)
+2. 对于任意的$x\in P$,不存在从$P$到$P _{<x}:= \{y\in P: y<x\}$的同构(若存在则存在$\phi : P \to P_{<x}$,其必然为$P$到自身的严格增映射并且满足$\phi(x)<x$,但是由于$P$没有非平凡的自同构,于是不成立)
+
+形如$P_{<x}$的子集继承了$P$的良序,称作$P$的一个前段,记作$P[x]$.
+
+既然得到了前段的定义,我们也就可以考虑两个良序集$(W_1,<_1)$,$(W_2,<_2)$之间的同构了
+
+引理: 若$(W_1,<_1)$和$(W_2,<_2)$同构,则它们之间的同构是唯一的.
+
+[证明]
+
+设$W_1$和$W_2$之间存在两个同构$f,g$接下来令$h = g^{-1}\circ f: W_1 \to W_1$不难发现$h$也是同构并且有$h = \text{id}_{W_1}$即$h$为恒等映射,于是自然有$g = f$
+
+
+
+定理(良序集基本定理) 如果$(W_1,<_1)$和$(W_2,<_2)$为良序集,则以下的条件恰有一个成立(在不构成混淆的时候$<_1$和$<_2$均使用$<$代替
+
+1. $W_1$和$W_2$同构
+2. $W_1$与$W_2$的前段同构
+3. $W_2$与$W_1$的前段同构
+
+[证明]
+
+定义$f \subset W_1 \times W_2$
+$$
+f=\{(x,y) \in W_1 \times W_2:W_{1}[x] \text{同构于} W_{2}[y]\}
+$$
+不难发现若存在$W_{1}[x_1]$与$W_{1}[x_2]$与$W_{2}[y]$同构则由于同构为双射,设$f:W_{1}[x_1]\to W_{2}[y]$,$g:W_{1}[x_2]\to W_{2}[y]$,接着考虑$g^{-1}\circ f$得到$W_{1}[x_1]$与$W_{1}[x_2]$之间的同构,由于$W_{1}[x_1]$和$W_{1}[x_2]$都是$W_1$的前段,于是其本质上为$W_1$到自身的同构,即为恒等映射,即有$x_1=x_2$
+
+于是同理可以推出$f$是一个映射(若$W_{1}[x]$同构于$W_{2}[y_1]$和$W_{2}[y_2]$则有$y_1 = y_2$)于是$f$是一个单射(从而我们可以双向考虑).
+
+其次若$h$是$W_{1}[x']$到$W_{2}[f(x')]$的同构,显然有$h|W_{1}[x]$是到$W_{2}[h(x)]$的同构,显然有$f(x) = h(x)<_2f(x')$于是得到$x<_1x'$蕴含$f(x)<_2f(x')$
+
+不难发现$f$的定义域$\text{Dom}(f)$是$W_1$的前段.且有$R(f)$是$W_2$的前段.
+
+于是$f$是由$W_1$的一个前段$\text{Dom}(f)$到$W_2$的一个前段$R(f)$的同构.
+
+因此我们可以考虑以下三种情况
+
+* 假设$\text{Dom}(f)\neq W_1$,则$\text{Dom}(f) = W_1[w]$是$W_1$的一个真前段.假设$R(f)\neq W_2$则存在$w' \in W_2$使得$R(f) = W_2[w']$因此$f$为$W_1[w]$与$W_2[w']$的同构.于是有$w \in \text{Dom}(f) = W_1[w]$即$w<w$,造成矛盾,于是可以得到3.成立
+* 假设$\text{R}(f)\neq W_2$,则可以得出$\text{Dom}(f) =W_1$
+* 若有$\text{Dom}(f)  = W_1$,$R(f) =W_2$则可以得到$f$为$W_1$到$W_2$的同构.
+
+由于$W_1$到$W_2$的同构是唯一的,于是得知三种情况至多只有一种成立$\Box$
+
+
+
+
+
 ## 序数
 
-## 超穷归纳法
+在无穷公理的番外中,我们提到了$\text{Cantor}$对于序数的定义
+
+> 两个全序集被称作是相似的,若它们是一一对应且保留顺序(也称为保序双射,即同构),即若$m_1$对应于$n_1$,$m_2$对应于$n_2$,而$m_1<m_2$则必然有$n_1<n_2$.两个相似的集合具有相同的序型或序数,序数即为一个全序集$M$的集合顺序的序型.
+
+但是若按照这么来看,若我们考虑集合的属于关系作为包含关系,则可以得到一个"所有集合的集合"($\text{Cantor}$当时并没有考虑到这些),这显然是一个真类,于是我们必须将序数作为一个类而非集合来看待,那么对于所有序数所构成的类$\bold{On}$,即我们需要操作"类的类",但是我们可以从良序集中挑选出一个标准的良序集,从而可以得到更精确的描述
+
+定义 (序数,$\text{von Neumann}$) 如果一个集合$\alpha$的每个元素都是$\alpha$的子集(换言之$\alpha \subset \mathcal{P}(\alpha)$),则称$\alpha$为__传递的__,若传递集$\alpha$对于所有的$x< y\xLeftrightarrow{\text{定义}}x\in y$构成一个良序集,则称$\alpha$为序数.
+
+若$\alpha$为一个序数,接下来验证$\alpha \sqcup \{\alpha\}$也是一个序数.
+
+首先,由于$\alpha$为一个序数,于是有$\alpha \subset \mathcal{P}(\alpha)$,对于$\alpha\sqcup\{\alpha\}$有$\forall x \in \alpha \sqcup \{\alpha\}\Rightarrow x \in \mathcal{P}(\alpha)\text{或} x = \alpha$,不难发现$\mathcal{P}(\alpha) \subset \mathcal{P}(\alpha \sqcup \{\alpha\})$并且$\alpha \in \mathcal{P}(\alpha \sqcup \{\alpha\})$于是得到$\alpha \sqcup\{\alpha\}$也是一个序数.
+
+根据我们先前的说法,将其称为$\alpha$的一个后继,再根据$\text{Peano}$公理中的类似定义,记$\alpha +1 = \alpha^{+} := \alpha \sqcup\{\alpha\}$.不难看出它是大于$\alpha$的最小序数.若$\alpha$不是任何序数的后继,则称$\alpha$为极限序数.
+
+接下来得到序数的几个性质:
+
+1. 若$\alpha$为序数,则$\alpha$的所有元素都是序数,所以由$\alpha = \{\beta: (\beta< \alpha)\land (\beta\text{为序数})\}$
+
+   由于$\alpha$为序数,于是$\alpha$是传递的,于是$\beta \subset \alpha$,于是若$x \in y\in \beta$有$y \in \alpha$于是有$x \in \alpha$.于是得到$x,y,\beta \in \alpha$由于$\alpha$为一个关于$\in$的良序集,于是不难得到$\beta$是传递集,于是不难得到$\beta$是$\alpha$的一个前序,即$\beta$也是序数.$\B
+
+2. 如果$\alpha$是序数,且$B \subset \alpha$是传递集,则$B$是序数,且$B \in \alpha$.特别地,对于任意序数$\alpha,\beta$若$\beta \subsetneq \alpha$则$\beta \in \alpha$.
+
+   
+
+3. 
+
+
+
+## 递归原理与超穷归纳法
 
 # 基数
 
@@ -464,10 +549,25 @@ $$
 >
 > 他接着定义实数的运算.分割$(A_1,A_2)$和$(B_1,B_2)$的加法是这样定义的:设$c$是任一有理数,如果有$a_1$属于$A_1$,$b_1$属于$B_1$,使得$a_1 + b_1 \geq c$我们就把$c$放在类$C_1$中.所有其他的有理数都放在类$C_2$中.这两类数$C_1$和$C_2$构成一个分割$(C_1,C_2)$,因为$C_1$中的每一个数小于$C_2$中每一个数.这个分割$(C_1,C_2)$就是$(A_1,A_2)$和$(B_1,B_2)$的和.他说,其他的运算可以类似地定义.他现在就能建立加法和乘法结合与交换等性质.虽然$\text{Dedekind}$的无理数理论,经过上面指出的一些少量修改之后,是完全符合逻辑的,但是$\text{Cantor}$认为分割在分析中的出现并不自然而加以批评.
 >
+> 
+>
+> $\text{Dedekind}$分割的现代定义如下所示
+>
+> 定义($\text{Dedekind}$分割)如果集合$A \subset \Q$满足:
+>
+> 1. $A \neq 0$且$A \neq \Q$
+> 2. $A$是向下封闭的:若$p \in A$且$q < p$则$q\in A$
+> 3. $A$没有极大元:如果$p\in A$则存在$q\in A,p<q$
+>
+> 就称$A$是一个$\text{Dedekind}$分割.全体$\text{Dedekind}$分割的集合记为$\R$,$\R$的元素又称为实数.
 
 我们认为实数集$\R$是连续的(参见前文所介绍的$\text{Dedekind}$分割,由于实数中任意一个数都可以构成分割,并且直线中任意一个点都可以由分割作出,并且直线必然是连续的,于是我们可以得出$\text{Dedekind}$分割可以推导出实数集是连续的,而有理数集是稠密的)并且不难得到实数集与$[0,1]$之间存在一个一一对应,构建映射(即常见的$\text{sigmoid}$函数,这在我们的神经网络中经常用到,其表达式为$\frac{1}{1+e^{-x}}$).即可得到$(0,1)$与$\R$之间的一一对应.不难得到$(0,1)$与$[0,1]$之间的一个一一对应(将$(0,1)$中所有的有理数以某种排列$r_1,r_2,\cdots,r_n,\cdots$的形式排列然后$0\mapsto r_1$,$1 \mapsto r_2$,$r_1 \mapsto r_3$,$r_2\mapsto r_4$,$r_3 \mapsto r_5$,$\cdots$,$r_{n} \mapsto r_{n+2}$,$\cdots$其中左侧为$[0,1]$,右侧为$(0,1)$得到这显然是一个一一对应).
 
-
+> 同样地,我们对于稠密性可以将有理数集$\Q$看做一个全序集进行更进一步的定义.即
+>
+> 定义(稠密性) 全序集$(X,<)$是稠密的,如果它至少有两个元素,并且对于任意的$a,b\in X$,如果$a<b$,则存在$x\in X$满足$a<x<b$
+>
+> 这也是历史上在$\text{Dedekind}$分割出现前对于连续性的定义(那时人们认为有理数是连续的)
 
 接下来我们考虑$[0,1]$和$\N$,即验证$[0,1]$是不可数集.
 
@@ -484,7 +584,7 @@ $$
 
 
 
-由于$|\R| = |[0,1]|$于是可以得到$|R| > \aleph_0$.
+由于$|\R| = |[0,1]|$于是可以得到$|\R| > \aleph_0$.
 
 
 
@@ -514,7 +614,7 @@ $$
 
 2. 设$|A_1| \leq |A_2|, |A_2| \leq |A_3|$,则$|A_1| \leq |A_3|$
 
-   根据先前所述,
+   根据先前所述,得到$f:A_1 \hookrightarrow A_2,g:A_2 \hookrightarrow A_3$于是可以得到$g \circ f:A_1 \hookrightarrow A_3$于是得到$|A_1|\leq |A_3|$
 
 3. 
 
@@ -655,12 +755,12 @@ $$
    $\Box$
 
 10. 与9类似,可以得到
-   $$
+$$
    \begin{eqnarray*}
    (\liminf_{n \to \infty}x_n)(\liminf_{n \to \infty}y_n)&\leq& \liminf_{n\to \infty}\{x_ny_n\}\leq (\limsup_{n \to \infty}x_n)(\liminf_{n \to \infty }y_n)\\
    &\leq& \limsup_{n \to \infty}\{x_ny_n\} \leq (\limsup_{n \to \infty}x_n)(\limsup_{n \to \infty}y_n)
    \end{eqnarray*}
-   $$
+$$
    证明从略
 
 
